; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/gen/extr_jrand48.c_jrand48.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/gen/extr_jrand48.c_jrand48.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @jrand48(i16* %0) #0 {
  %2 = alloca i16*, align 8
  store i16* %0, i16** %2, align 8
  %3 = load i16*, i16** %2, align 8
  %4 = call i32 @_dorand48(i16* %3)
  %5 = load i16*, i16** %2, align 8
  %6 = getelementptr inbounds i16, i16* %5, i64 2
  %7 = load i16, i16* %6, align 2
  %8 = zext i16 %7 to i32
  %9 = shl i32 %8, 16
  %10 = load i16*, i16** %2, align 8
  %11 = getelementptr inbounds i16, i16* %10, i64 1
  %12 = load i16, i16* %11, align 2
  %13 = zext i16 %12 to i32
  %14 = or i32 %9, %13
  %15 = sext i32 %14 to i64
  ret i64 %15
}

declare dso_local i32 @_dorand48(i16*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
